[PlayStation] Fix build break after r291341 https://bugs.webkit.org/show_bug.cgi?id=237971

Unreviewed build fix.


* platform/playstation/MIMETypeRegistryPlayStation.cpp:
(WebCore::MIMETypeRegistry::mimeTypeForExtension):



Canonical link: https://commits.webkit.org/248500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291368 268f45cc-cd09-0410-ab3c-d52691b4dbfc